<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="horizontal"
        android:padding="@dimen/Twenty">

        <ImageButton
            android:id="@+id/my_login_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/Ten"
            android:background="@null"
            android:src="@mipmap/ic_back_dark_center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/Black"
            android:textSize="@dimen/EighteenthS"/>
    </LinearLayout>

    <include layout="@layout/background_line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/Zero"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/Ten"
        android:layout_weight="5"
        android:gravity="bottom"
        android:text="不用注册, 用以下账号直接登录"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Zero"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/my_login_qq"
            android:layout_width="@dimen/Zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Ten"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/ic_login_qq"
            android:gravity="center"
            android:text="@string/QQ"
        />
        <Button
            android:id="@+id/my_login_wechat"
            android:layout_width="@dimen/Zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Ten"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/ic_login_wechat"
            android:gravity="center"
            android:text="@string/WeChat"
        />
        <Button
            android:id="@+id/my_login_weibo"
            android:layout_width="@dimen/Zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Ten"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/ic_login_weibo"
            android:gravity="center"
            android:text="@string/weibo"
        />
        <Button
            android:id="@+id/my_login_boohee"
            android:layout_width="@dimen/Zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Ten"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/ic_login_boohee"
            android:gravity="center"
            android:text="@string/mint"
        />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/Zero"
        android:layout_marginTop="@dimen/Thirty"
        android:layout_weight="4"
        android:src="@mipmap/img_tomato_bread"/>


</LinearLayout>
