<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/White"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:background="@mipmap/img_my_bg">
        <TextView
            android:id="@+id/My_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/Twenty"
            android:text="@string/my"
            android:textColor="@color/White"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/My_imgView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/img_default_avatar"/>
        <ImageView
            android:id="@+id/imageView_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/Ten"
            android:src="@mipmap/ic_my_setting"/>
        <Button
            android:id="@+id/my_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/My_imgView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/Ten"
            android:background="@drawable/shape_login"
            android:text="@string/Click_login"
            android:textColor="@color/White"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelativeLayout_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_onclick"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/my_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Twenty"
            android:src="@mipmap/ic_my_photo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_photo"
            android:layout_marginLeft="@dimen/Ten"
            android:layout_toRightOf="@+id/my_photo"
            android:text="@string/My_photo"/>
        <include layout="@layout/background_line"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_collcet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_onclick"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/my_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Twenty"
            android:src="@mipmap/ic_my_collect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_collect"
            android:layout_marginLeft="@dimen/Ten"
            android:layout_toRightOf="@+id/my_collect"
            android:text="@string/My_collect"/>
        <include layout="@layout/background_line"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelativeLayout_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_onclick"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/my_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Twenty"
            android:src="@mipmap/ic_my_upload"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_upload"
            android:layout_marginLeft="@dimen/Ten"
            android:layout_toRightOf="@+id/my_upload"
            android:text="@string/Data_upload_food"/>
        <include layout="@layout/background_line"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RelativeLayout_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_onclick"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/my_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Twenty"
            android:src="@mipmap/ic_my_order"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_order"
            android:layout_marginLeft="@dimen/Ten"
            android:layout_toRightOf="@+id/my_order"
            android:text="@string/My_order"/>
        <include layout="@layout/background_line"/>

    </RelativeLayout>

</LinearLayout>